# Drone-Gate

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/: benchmark_report.json
artifacts/airsim_local/: summary.json  telemetry.csv  telemetry.jsonl
artifacts/easy/: summary.json  telemetry.csv  telemetry.jsonl
artifacts/medium/: summary.json  telemetry.csv  telemetry.jsonl
artifacts/noisy/: summary.json  telemetry.csv  telemetry.jsonl
configs/: airsim_local.yaml  easy.yaml  medium.yaml  noisy.yaml
docs/: architecture.md  limitations.md  roadmap.md
scripts/: benchmark.py  plot_telemetry.py  run_demo.py  visualize_navigation.py
src/common/: config.py  math_utils.py  telemetry.py  types.py
src/control/: pid_controller.py
src/drone_gate_navigator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/estimation/: filters.py  pose_estimator.py  state_estimator.py
src/mission/: manager.py  runner.py
src/perception/: classical_detector.py  interfaces.py  pipeline.py
src/planning/: local_planner.py
src/sim/: airsim_adapter.py  factory.py  simulator.py
tests/: test_airsim_adapter.py  test_backend_fallback.py  test_integration_single_gate.py  test_planner.py  test_pose_estimator.py  test_sim_hooks.py
ui/: README.md  index.html  main.js  styles.css
ui/components/: controlBar.js  courseMap.js  eventTimeline.js  healthStatusGrid.js  missionStatusCard.js  perspectiveView.js  telemetryPanel.js  trendCharts.js
ui/data/: presets.js
ui/state/: missionSimulator.js
