[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-gate-navigator"
version = "0.1.0"
description = "Simulation-first autonomous drone gate navigation MVP"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Drone Autonomy Team" }]
dependencies = [
  "numpy>=1.25",
  "opencv-python-headless>=4.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
viz = [
  "matplotlib>=3.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
